added library optioning support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,23 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 project(OLAS VERSION 1.0)
+
+# adder use logic
+option(USE_ADDER "A simple library for adding 2 floats." ON)
+
+if (USE_ADDER)
+    add_subdirectory(Adder)
+    list(APPEND EXTRA_LIB_DIRS Adder)
+    list(APPEND EXTRA_INCLUDES_DIRS "${PROJECT_SOURCE_DIR}/Adder")
+    list(APPEND EXTRA_LINKS adder)
+endif()
+
 configure_file(OLASConfig.h.in OLASConfig.h)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})
 
-add_subdirectory(Adder)
 
 # --------- DOWNLOAD ALL THE SUBMODULES ---------
 
@@ -33,12 +43,15 @@ endif()
 add_subdirectory(external/glfw)
 
 target_include_directories(${PROJECT_NAME} 
-    PUBLIC Adder
     PUBLIC external/glfw/include
+    ${EXTRA_INCLUDES_DIRS}    
 )
 
 target_link_directories(${PROJECT_NAME} 
-    PRIVATE Adder
     PRIVATE external/glfw/src
+    ${EXTRA_LIB_DIRS}    
     )
-target_link_libraries(${PROJECT_NAME} adder glfw)
+target_link_libraries(${PROJECT_NAME}
+    ${EXTRA_LINKS}
+    glfw
+    )
